# chem_agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  chemintel.db  docker-compose.yml  pyproject.toml  test_db.py  test_embed.py  test_lit.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_auth_pgvector_runtime.py
app/: __init__.py  main.py
app/adapters/easyagent/: __init__.py  agent_factory.py  eval_adapter.py  llm_factory.py  rag_factory.py  retrievers.py
app/core/: config.py  exceptions.py  llm.py  observability.py  security.py
app/db/: models.py  session.py
app/integrations/: chebi_client.py  chembl_client.py  embedding_client.py  object_storage.py  pmc_client.py  pubchem_client.py  pubmed_client.py
app/modules/activities/: __init__.py  router.py  schemas.py  service.py
app/modules/agents/: router.py  schemas.py  service.py
app/modules/audit/: router.py  service.py
app/modules/auth/: router.py  schemas.py  service.py
app/modules/compounds/: __init__.py  (+3 more)
app/prompts/: agent_system.md  answer_verification.md  literature_brief.md  multi_query.md  rerank.md
app/workers/: celery_app.py  embedding_tasks.py  literature_tasks.py  sync_tasks.py
chemintel_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bootstrap_admin.py  rebuild_embeddings.py  run_eval.py  seed_chebi.py  seed_chembl.py  seed_pubchem.py  seed_pubmed_pmc.py
tests/: conftest.py
tests/eval/: test_eval_cases.py
tests/integration/: test_seed_shapes.py
tests/unit/: test_config.py  test_embedding_client.py  test_retrievers.py  test_security.py
(+21 files in other folders)
