[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemintel-api"
version = "0.1.0"
description = "ChemIntel API: an enterprise chemistry intelligence backend with FastAPI, RAG, and agent orchestration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "alembic>=1.13.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3.0",
  "argon2-cffi>=23.1.0",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "black>=24.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
